--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ body {
 }
 </style>
 
+
+
 <script>
 function light(sw) {
   var pic;
@@ -66,7 +68,7 @@ function light(sw) {
 
 
 <div style="position: relative;">
-   <img src="black.jpg" id="myImage" src="white.jpg" width="1185" height="539"; style="position: absolute; left: 119px; top: 25px;">
+   <img src="black.jpg" id="myImage" src="white.jpg" width="1185" height="539"; style="position: absolute; left: 8.4%; top: 25px;">
 </div>
 
 
