--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function light(sw) {
 
 
 <div style="position: relative;">
-   <img src="black.jpg" id="myImage" src="white.jpg" width=83.2%; height="539"; style="position: absolute; left: 8.4%; top: 25px; background-size: 100% 100%;">
+   <img src="black.jpg" id="myImage" src="white.jpg" width=83.2%; height="539"; style="position: absolute; left: 8.4%; top: 25px;">
 </div>
 
 
